--- a/index2.html
+++ b/index2.html
@@ -101,14 +101,14 @@
         <img src="photo4.jpg" alt="Photo 4">
     </section>
     <section class="letter">
-        <h2>A Love Letter</h2>
+        <h2>A Birthday Wish </h2>
         <p>My dearest Nidhi,</p>
         <p>I never thought that I could find someone as special as you. You make me a better person. Happy birthday.</p>
-        <p>With all my love,</p>
+        <p>Happy Birthday Nidhi,</p>
         <p>Shivam</p>
     </section>
     <section class="playlist">
-        <h2>Our Special Playlist</h2>
+        <h2>Special Playlist</h2>
         <ul>
             <li>Gallan Goodiyaan - Yashita Sharma , Manish Kumar</li>
             <li><audio src="song1.mp3" controls></audio></li>
